Worked on script.js - added event listeners to all buttons. Modified styles.css

--- a/index.html
+++ b/index.html
@@ -10,36 +10,30 @@
     <div class="container">
       <div class="column left">
         <div class="scroll-text-container">
-          <div class="scroll-text">Time Periods:</div>
+          <div class="scroll-text">TIME PERIODS</div>
         </div>
 
         <div class="buttons-left">
           <button class="time-button" data-value="1">
-            Ancient River Civilizations (3000 to 1200 BCE)
+            Ancient River Civilizations
           </button>
           <button class="time-button" data-value="2">
-            Late Bronze Age & Iron Age Empires (1200 to 600 BCE)
+            Late Bronze Age & Iron Age Empires
           </button>
           <button class="time-button" data-value="3">
-            Classical Civilizations (600 BCE to 600 CE)
+            Classical Civilizations
           </button>
-          <button class="time-button" data-value="4">
-            Early Middle Ages (600 to 1200 CE)
-          </button>
+          <button class="time-button" data-value="4">Early Middle Ages</button>
           <button class="time-button" data-value="5">
-            High Middle Ages & Global Empires (1200 to 1500 CE)
+            High Middle Ages & Global Empires
           </button>
-          <button class="time-button" data-value="6">
-            Early Modern Era (1500 to 1750 CE)
-          </button>
+          <button class="time-button" data-value="6">Early Modern Era</button>
           <button class="time-button" data-value="7">
-            Age of Revolutions & Industry (1750 to 1914 CE)
+            Age of Revolutions & Industry
           </button>
-          <button class="time-button" data-value="8">
-            World Wars (1914 to 1945 CE)
-          </button>
+          <button class="time-button" data-value="8">World Wars</button>
           <button class="time-button" data-value="9">
-            Cold War & Globalization Era (1945 CE to Present)
+            Cold War & Globalization Era
           </button>
         </div>
       </div>
@@ -56,7 +50,7 @@
       </div>
       <div class="column right">
         <div class="scroll-text-container">
-          <div class="scroll-text">Areas of the World:</div>
+          <div class="scroll-text">AREAS OF THE WORLD</div>
         </div>
         <div class="buttons-right">
           <button class="area-button" data-value="1">South Asia</button>
